--- a/bitcoinApp/src/pages/create/create.html
+++ b/bitcoinApp/src/pages/create/create.html
@@ -10,5 +10,17 @@
 
 
 <ion-content padding>
+<ion-card>
+      <ion-card-header>
+        Bitcoin
+        <ion-icon name="logo-bitcoin"></ion-icon>
+      </ion-card-header>
+      <ion-card-content>
+        Description about bitcoin
+      </ion-card-content>
+</ion-card>
+
+  <button ion-button round block (click)='createAddress()'>Create Bitcoin address</button>
+
 
 </ion-content>
